iptables/iptables.rules
# Generated by iptables-save v1.8.10 (nf_tables) on Sat Oct  5 10:09:28 2024
*filter
:INPUT DROP [4:595]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [8722:903762]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j DROP
-A INPUT -p icmp -j ACCEPT
-A INPUT -s 192.168.122.0/24 -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8082 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8083 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT
COMMIT
# Completed on Sat Oct  5 10:09:28 2024
# Generated by iptables-save v1.8.10 (nf_tables) on Sat Oct  5 10:09:28 2024
*nat
:PREROUTING ACCEPT [3:180]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 8080
COMMIT
# Completed on Sat Oct  5 10:09:28 2024
